--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <div class = "squares">
-        <div class = "square">A</div>
-        <div class = "square">B</div>
-        <div class = "square">C</div>
-        <div class = "square">D</div>
-        <div class = "square">E</div>
+        <div class = "square" data-key = "65">A</div>
+        <div class = "square" data-key = "66">B</div>
+        <div class = "square" data-key = "67">C</div>
+        <div class = "square" data-key = "68">D</div>
+        <div class = "square" data-key = "69">E</div>
     </div>
     
+
+    <audio data-key = "65" src = "music/a.m4a"></audio>
 </body>
 </html>
